@@ -1,9 +1,14 @@
 PRJ_VER=1.2.0
-SUMMARY=gitignore file as sorce of CPACK_SOURCE_IGNORE_FILES;ChangeLog.prev is no longer required
-REDHAT_BUGZILLA=1040333
+SUMMARY=Fixed Bug 1040333, 1046213
+REDHAT_BUGZILLA=1040333,1046213
 [Changes]
+- Resolves Bug 1040333 - RFE: Suiport .gitignore file as 
+  source of CPACK_SOURCE_IGNORE_FILES
+- Resolves Bug 1046213 - RFE: RPM ChangeLog should be generated by 
+  newest build from koji 
 - Enhancement:
   + ChangeLog.prev is no longer required.
+  + RPM-ChangeLog.prev is provide by koji now.
   + cmake-fedora-koji: 
     - new subcommand: newest-build and newest-changelog.
   + cmake-fedora-changelog: new script. 
@@ -15,8 +20,6 @@ REDHAT_BUGZILLA=1040333
   + ManageArchive:
     - PACK_SOURCE_CPACK: Pack with CPack
     - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
-    - Fixed Bug 1040333 - RFE: Support .gitignore file as 
-      source of CPACK_SOURCE_IGNORE_FILES
   + ManageDependency: Manage dependencies.
   + ManageRPM: 
     - PACK_RPM: New options: SPEC_IN and SPEC.
