@@ -1,6 +1,11 @@
-* Mon Jan 06 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.0
+* Tue Jan 07 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.0
+- Resolves Bug 1040333 - RFE: Suiport .gitignore file as 
+  source of CPACK_SOURCE_IGNORE_FILES
+- Resolves Bug 1046213 - RFE: RPM ChangeLog should be generated by 
+  newest build from koji 
 - Enhancement:
   + ChangeLog.prev is no longer required.
+  + RPM-ChangeLog.prev is provide by koji now.
   + cmake-fedora-koji: 
     - new subcommand: newest-build and newest-changelog.
   + cmake-fedora-changelog: new script. 
@@ -12,11 +17,12 @@
   + ManageArchive:
     - PACK_SOURCE_CPACK: Pack with CPack
     - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
-    - Fixed Bug 1040333 - RFE: Support .gitignore file as 
-      source of CPACK_SOURCE_IGNORE_FILES
   + ManageDependency: Manage dependencies.
+  + ManageRPM: 
+    - PACK_RPM: New options: SPEC_IN and SPEC.
   + ManageString:
     - STRING_APPEND: Append a string to a variable.
+    - STRING_PADDING: Padding the string to specified length
   + ManageTranslation:
     - MANAGE_GETTEXT: 
       + Can specify MSGFMT_OPTIONS and MSGMERGE_OPTIONS
